# nyandere

./: .gitignore  Cargo.toml  README.md  track.db
asset/examples/: simple.nyan  typical.nya  typical.nyan
doc/: arch.typ  gfx.typ  manual.typ  prelude.typ  sketch.typ  syntax.abnf
migration/: Cargo.toml
migration/src/: lib.rs  m20241103_000001_base.rs  m20241130_000001_base.rs  main.rs
src/: aux.rs  config.rs  ext.rs  lib.rs  main.rs  model.rs  store.rs  ui.rs
src/entity/: consumption.rs  mod.rs  prelude.rs  product.rs  purchase.rs  session.rs
src/ext/: config.rs  mod.rs  ui.rs
src/lang/: ast.rs  parse.rs  tests.rs
src/model/: actor.rs  cmd.rs  encode.rs  mod.rs  runtime.rs
src/model/db/: concept.rs  delivery.rs  mod.rs  object.rs  payment.rs  prelude.rs  session.rs  user.rs
src/runtime/: cmd.rs  encode.rs  error.rs  mod.rs  model.rs  repr.rs  state.rs
src/runtime/cmd/: balance.rs  create.rs  deliver.rs  mod.rs  pay.rs
src/syntax/: ast.rs  lex.rs  mod.rs  parse.rs  tests.rs
util/: init  regen
