[package]
name = "nyandere"
description = "i help with keeping track of purchases. meow"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", ""]

authors = ["MultisampledNight"]
repository = "https://github.com/MultisampledNight/nyandere"

edition = "2021"
version = "0.1.0"

[dependencies]
eyre = "0.6.12"
futures = "0.3.29"
migration = { version = "0.1.0", path = "migration", package = "nyandere_migration" }
sea-orm = { version = "1.1.0", features = ["runtime-tokio", "sqlx-sqlite"] }
thiserror = "1.0.66"
time = "0.3.36"
tokio = { version = "1.41.0", features = ["full"] }
