[package]
name = "nyandere"
description = "i help with keeping track of purchases. meow"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "finance"]

authors = ["MultisampledNight"]
repository = "https://github.com/MultisampledNight/nyandere"

edition = "2021"
version = "0.1.0"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.29"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "1.0.66"
time = "0.3.36"
tokio = { version = "1.41.0", features = ["full"] }
