[package]
name = "nyandere"
description = "i help with keeping track of purchases. meow"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "finance"]

authors = ["MultisampledNight"]
repository = "https://github.com/MultisampledNight/nyandere"

edition = "2024"
version = "0.1.0"

[dependencies]
chumsky = "1.0.0-alpha.8"
clap = { version = "4.5.21", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.29"
macro_rules_attribute = "0.2.0"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "1.0.66"
time = "0.3.36"

