[package]
name = "nyandere_migration"
description = "db migrations for nyandere. see the nyandere crate."
license = "MIT OR Apache-2.0"

edition = "2021"
version = "0.1.0"

[lib]
name = "nyandere_migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio",
  "sqlx-sqlite",
]
